@@ -19,6 +19,8 @@
   * Fix a memory leak when duplicating child nodes. #353
   * Fixed off-by-one bug with nth-last-{child,of-type} CSS selectors when NOT using an+b notation. #354
   * Fixed passing of non-namespace attributes to SAX::Document#start_element. #356
+  * Workaround for libxml2 in-context parsing bug. #362  
+  * Fixed NodeSet#wrap on nodes within a fragment. #331
 
 === 1.4.3 / 2010/07/28
 
